# img-cutout

./: Cargo.toml
src/: main.rs
src/api/: image_cutout.rs  mod.rs
src/service/: image_cutout.rs  mod.rs
