[package]
name = "rs-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["multipart"] }
image = "0.25.6"
log = "0.4.27"
mime = "0.3.17"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
